Hair Dynamics stop working after saving new file #56595

Closed
opened 2018-08-28 17:29:25 +02:00 by Kenneth Malm · 8 comments

System Information
Windows 7 Professional
GeForce GTX 1060 6GB

Blender Version
Version 2.79b
System info generator gives me this info: version: 2.79 (sub 0), branch: master, commit date: 2018-03-22 14:10, hash: f4dc9f9d68

Short description of error
While working on particle hair with Hair Dynamics, I save a new file (I make new saves often so I can always go back, etc.). In this new save, the Hair Dynamics stop working. If I move the scalp mesh with the timeline playing, the hair stays in place, but stretches to the scalp. See picture:

Exact steps for others to reproduce the error
I don't know what steps to take, since I don't know what caused this error. The only idea I have, is that the file that works was saved with the Hair Dynamics box ticked, but the new save was made when I had turned off Hair Dynamics by un-ticking the box (on each particle system). If this has any meaning, I don't know.

I have uploaded both saves, one that works and the one that don't. If anyone can find the reason or a fix, I would be really gratefulhair_works.blend

hair_dont_work.blend

**System Information** Windows 7 Professional GeForce GTX 1060 6GB **Blender Version** Version 2.79b System info generator gives me this info: version: 2.79 (sub 0), branch: master, commit date: 2018-03-22 14:10, hash: f4dc9f9d68b **Short description of error** While working on particle hair with Hair Dynamics, I save a new file (I make new saves often so I can always go back, etc.). In this new save, the Hair Dynamics stop working. If I move the scalp mesh with the timeline playing, the hair stays in place, but stretches to the scalp. [See picture: ](https://i.stack.imgur.com/GkkxD.jpg) **Exact steps for others to reproduce the error** I don't know what steps to take, since I don't know what caused this error. The only idea I have, is that the file that works was saved with the Hair Dynamics box ticked, but the new save was made when I had turned off Hair Dynamics by un-ticking the box (on each particle system). If this has any meaning, I don't know. I have uploaded both saves, one that works and the one that don't. If anyone can find the reason or a fix, I would be really grateful![hair_works.blend](https://archive.blender.org/developer/F4427831/hair_works.blend) [hair_dont_work.blend](https://archive.blender.org/developer/F4427830/hair_dont_work.blend)
Author

Added subscriber: @KennethMalm

Added subscriber: @KennethMalm

Added subscriber: @YAFU

Added subscriber: @YAFU

As additional information it is possible to reproduce a Blender Crash with the scene with the following steps:
Open the scene. In Particles Tab press Free Edit button. In Type change from Hair to Emitter. In Type, change back from Emitter to Hair. Blender Crash.

As additional information it is possible to reproduce a Blender Crash with the scene with the following steps: Open the scene. In Particles Tab press Free Edit button. In Type change from Hair to Emitter. In Type, change back from Emitter to Hair. Blender Crash.

Added subscribers: @Sergey, @mont29

Added subscribers: @Sergey, @mont29
Sergey Sharybin was assigned by Bastien Montagne 2018-09-03 15:53:50 +02:00

Could not reproduce the crash, but can confirm the weird issue with hairs getting stuck to original position instead of dynamically following the scalp in master. Afaict, in 2.8 everything works fine though, so not sure it’s worth spending more time here, 2.7x is only getting critical fixes nowadays… @Sergey?

Could not reproduce the crash, but can confirm the weird issue with hairs getting stuck to original position instead of dynamically following the scalp in master. Afaict, in 2.8 everything works fine though, so not sure it’s worth spending more time here, 2.7x is only getting critical fixes nowadays… @Sergey?
Author

I would like to add that for a while, I have been using the new Dependency Graph in Blender, by using this command in the program shortcut: --enable-new-depsgraph

I have used this for both of the attached saves, but since one of them is working fine I'm not sure this is the issue, but would like to add it anyway.

I would like to add that for a while, I have been using the new Dependency Graph in Blender, by using this command in the program shortcut: --enable-new-depsgraph I have used this for both of the attached saves, but since one of them is working fine I'm not sure this is the issue, but would like to add it anyway.

This issue was referenced by 81ab9ef968

This issue was referenced by 81ab9ef968d392aa8edc79566bf02e23f93da7a8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56595
No description provided.